<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/editTextDialogProjectNew"
        android:textSize="30sp"
        android:text="@string/text_view_dialog_project_new" />

    <EditText
        android:id="@+id/editTextDialogProjectNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editTextDialogProjectNew"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDialogProjectNewAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/button_dialog_project_new_accept" />

        <Button
            android:id="@+id/buttonDialogProjectNewCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/button_dialog_project_new_cancel" />

    </LinearLayout>

</RelativeLayout>