<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">

    <TextView
        android:id="@+id/textViewRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/seekBarRed"
        android:layout_margin="0dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:text="@string/red"/>
    <SeekBar
        android:id="@+id/seekBarRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textViewGreen"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="3dp"
        android:minHeight="20dp"
        android:maxHeight="40dp"
        android:max="255"
        android:progressTint="@color/red"
        android:thumbTint="@color/red"
        android:background="@color/darkGray">

    </SeekBar>

    <TextView
        android:id="@+id/textViewGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/seekBarGreen"
        android:layout_margin="0dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:text="@string/green"/>

    <SeekBar
        android:id="@+id/seekBarGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_margin="10dp"
        android:padding="3dp"
        android:minHeight="20dp"
        android:maxHeight="40dp"
        android:max="255"
        android:progressTint="@color/green"
        android:thumbTint="@color/green"
        android:background="@color/darkGray">

    </SeekBar>

    <TextView
        android:id="@+id/textViewBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/seekBarGreen"
        android:layout_margin="0dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:text="@string/blue"/>
    <SeekBar
        android:id="@+id/seekBarBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewBlue"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="3dp"
        android:minHeight="20dp"
        android:maxHeight="40dp"
        android:max="255"
        android:progressTint="@color/blue"
        android:thumbTint="@color/blue"
        android:background="@color/darkGray">

    </SeekBar>

</RelativeLayout>